# lorem

./: .gitignore  Cargo.toml  README.md  index.html  lorem.js  lorem_bg.wasm  rust-toolchain
.github/workflows/: pages.yml  rust.yml
assets/: sw.js
src/: app.rs  lib.rs  main.rs
