[package]
name = "lorem"
version = "0.1.0"
authors = ["Allister Isaiah Harvey <a.i.harvey@icloud.com>"]
edition = "2021"
include = ["**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.27.2"
eframe = { version = "0.27.2", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4.21"

# You only need serde if you want app persistence:
serde = { version = "1.0.203", features = ["derive"] }
lipsum = "0.9.1"
rand = "0.8.5"
navigator = "0.3.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.3"
arboard = "3.4.0"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.69", features = ["Clipboard", "Navigator"] }


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
